Fixed css bug causing images to break their aspect ratio at small screen widths

--- a/src/components/lazyload-img/lazyload-img.css
+++ b/src/components/lazyload-img/lazyload-img.css
@@ -5,6 +5,6 @@
   
   img {
     max-width: 100%;
-    height: calc( (100vh - 100px) / 4);
-    flex: none;
+    max-height: calc( (100vh - 100px) / 4);
+    flex: 0;
   }
